--- a/samples/REG.html
+++ b/samples/REG.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CourseHive - Register</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="LOG.css">
+    <link rel="stylesheet" href="LogReg.css">
 </head>
 <body>
     <div class="container">
@@ -20,13 +20,17 @@
             <h2>Create Your Account</h2>
             <p>Fill in the details below to register for a new account.</p>
             <form id="registerForm" onsubmit="validateRegister(event)">
-                <input type="text" id="fullName" class="input-field" placeholder="Full Name" required>
+                <input type="text" id="username" class="input-field" placeholder="Username" required>
                 <input type="email" id="registerEmail" class="input-field" placeholder="Enter your email address" required>
                 <input type="password" id="registerPassword" class="input-field" placeholder="Create a password" required>
                 <input type="password" id="confirmPassword" class="input-field" placeholder="Confirm password" required>
+                <label>
+                    <input type="checkbox" id="termsCheckbox" class="checkbox" required>
+                    <span>I agree to the terms and conditions</span>
+                </label>
                 <button type="submit" class="sub-btn">Register</button>
             </form>
-            <p>Already have an account? <a href="login.html">Login here</a></p>
+            <p>Already have an account? <a href="LOG.html">Login here</a></p>
         </div>
     </div>
 
@@ -39,32 +43,37 @@
         function validateRegister(event) {
             event.preventDefault();
 
-            const fullName = document.getElementById('fullName').value;
+            const username = document.getElementById('username').value;
             const email = document.getElementById('registerEmail').value;
             const password = document.getElementById('registerPassword').value;
             const confirmPassword = document.getElementById('confirmPassword').value;
+            const termsChecked = document.getElementById('termsCheckbox').checked;
 
-            if (fullName && email && password && confirmPassword) {
+            if (username && email && password && confirmPassword) {
                 // Check if passwords match
                 if (password !== confirmPassword) {
                     alert("Passwords do not match. Please try again.");
                     return;
                 }
+                if (!termsChecked) {
+                    alert("Please agree to the terms and conditions.");
+                    return;
+                }
 
                 // AJAX to send registration data to PHP backend
                 const xhr = new XMLHttpRequest();
-                xhr.open("POST", "register.php", true);
+                xhr.open("POST", "backend/register.php", true);
                 xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
                 xhr.onreadystatechange = function() {
                     if (xhr.readyState == 4 && xhr.status == 200) {
                         alert(xhr.responseText); // Display response from backend
                         if (xhr.responseText == "Registration successful!") {
                             // Redirect to the login page after successful registration
-                            window.location.href = "login.html";
+                            window.location.href = "LOG.html";
                         }
                     }
                 };
-                xhr.send(`name=${fullName}&email=${email}&password=${password}`);
+                xhr.send(`name=${username}&email=${email}&password=${password}`);
             } else {
                 alert("Please fill in all fields.");
             }
