--- a/samples/homepage.html
+++ b/samples/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CourseHive - Welcome</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
     <!-- Header -->
@@ -15,8 +15,8 @@
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="login.html" class="btn">Login</a></li>
-                    <li><a href="register.html" class="btn">Register</a></li>
+                    <li><a href="LOG.html" class="btn">Login</a></li>
+                    <li><a href="REG.html" class="btn">Register</a></li>
                 </ul>
             </nav>
         </div>
