--- a/Admin/dashboard.html
+++ b/Admin/dashboard.html
@@ -51,7 +51,7 @@
 
         <!-- Table Section -->
         <div class="table-section">
-            <h2>Enrolled Courses</h2>
+            <h2>All Courses</h2>
             <table class="table">
                 <thead>
                     <tr>
