--- a/User/mycourses.html
+++ b/User/mycourses.html
@@ -28,21 +28,42 @@
             <h1>My Courses</h1>
         </div>
 
-        <!-- Course List Section -->
-        <section class="course-list">
-            <div class="course-item">
-                <h3>Intro to Web Development</h3>
-                <p>Enrolled: 120 users</p>
-            </div>
-            <div class="course-item">
-                <h3>Advanced Python Programming</h3>
-                <p>Enrolled: 80 users</p>
-            </div>
-            <!-- Additional courses can be added here -->
+        <!-- Article List Section -->
+        <section class="article-list" id="article-list">
+            <!-- Articles will be displayed here dynamically -->
         </section>
     </div>
 
+
     <script>
+        // Function to fetch stored course data and display it
+        function loadArticles() {
+            const articles = JSON.parse(localStorage.getItem('courses')) || [];
+            const articleList = document.getElementById('article-list');
+            articleList.innerHTML = ''; // Clear previous content
+
+            // Loop through the courses and add them to the article list
+            articles.forEach(course => {
+                const articleItem = document.createElement('div');
+                articleItem.classList.add('article-item');
+
+                const articleContent = `
+                    <img src="${course.imageUrl}" alt="Course Image">
+                    <div class="article-content">
+                        <h3>${course.title}</h3>
+                        <p class="meta">${course.creator} | ${course.date}</p>
+                        <p>${course.description}</p>
+                    </div>
+                `;
+
+                articleItem.innerHTML = articleContent;
+                articleList.appendChild(articleItem);
+            });
+        }
+
+        // Call loadArticles on page load to display saved courses
+        document.addEventListener('DOMContentLoaded', loadArticles);
+
         function confirmLogout() {
             const confirmation = confirm("Are you sure you want to logout?");
             if (confirmation) {
@@ -51,7 +72,7 @@
             }
         }
     </script>
-    
+
     <style>
         /* General Styles */
         * {
@@ -114,26 +135,51 @@
             color: #333;
         }
 
-        /* Course List Section */
-        .course-list {
-            margin-top: 20px;
+        /* Article List Section */
+        .article-list {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
         }
-        .course-item {
+        .article-item {
+            display: flex;
             background-color: #fff;
-            padding: 15px;
             border-radius: 8px;
-            margin-bottom: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
         }
-        .course-item h3 {
-            margin-bottom: 10px;
+
+        .article-item img {
+            width: 200px;
+            height: 150px;
+            object-fit: cover;
+        }
+
+        .article-content {
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .article-content h3 {
             font-size: 20px;
             color: #333;
+            margin-bottom: 10px;
         }
-        .course-item p {
+
+        .article-content .meta {
+            font-size: 12px;
+            color: #777;
+            margin-bottom: 15px;
+        }
+
+        .article-content p {
             font-size: 14px;
             color: #555;
+            line-height: 1.5;
         }
+
     </style>
 </body>
 </html>
